# hrm

./: .gitignore  PROJECT_STRUCTURE.md  check_db.py  debug_output.txt  docker-compose.yml  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 017a3df208d6_invoice_design_updates.py  526abae4d9c6_invoice_snapshot_and_rates_v2.py  696a0e21ba53_add_invoice_tables.py  ad8e8eeced16_initial_tables_companies_users_roles.py  b576bbb17a42_extended_company_profile_and_clients.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  clients.py  companies.py  invoices.py  users.py
app/core/: config.py  dependencies.py  security.py
app/database/: base.py  session.py
app/models/: __init__.py  candidate.py  client.py  client_column_config.py  company.py  invoice.py  role.py  user.py
app/schemas/: __init__.py  auth.py  candidate.py  client.py  client_column_config.py  company.py  invoice.py  role.py  user.py
app/services/: auth_service.py  candidate_service.py  client_service.py  company_service.py  invoice_service.py  user_service.py
app/services/invoice/: __init__.py  docx_helpers.py  files.py  generator.py  service.py
app/utils/: files.py
scripts/: create_superadmin.py  verify_features.py  verify_invoice_gen.py
